Pull request #417: Ikresic MM-6172 android release 12.0.0
Merge in MML/infobip-mobile-messaging-android from ikresic-MM-6172-android-release-12.0.0 to master

Squashed commit of the following:

commit b716e382a2dcd71e22d98fe0a7ce4e723034e6fb
Author: ikresic <ivan.kresic@infobip.com>
Date:   Mon Jan 15 13:37:43 2024 +0100

    - merging feature branch into release branch

commit d9b7ff6582b5c305c05ba6befd794ec81c01988e
Author: ikresic <ivan.kresic@infobip.com>
Date:   Mon Jan 15 13:37:11 2024 +0100

    - merging feature branch into release branch

commit 573034b127725b4f85100369b67cd19fa6cc7d0d
Merge: 68edac8e f3ad3681
Author: ikresic <ivan.kresic@infobip.com>
Date:   Mon Jan 15 13:21:13 2024 +0100

    Merge branch 'feature/release_12.0.0' into ikresic-MM-6172-android-release-12.0.0

    # Conflicts:
    #	README.md
    #	gradle.properties
    #	infobip-rtc-ui/README.md

commit f3ad3681edee14b130fb0c83e59a91e4c8390b8e
Author: Ivan Krešić <Ivan.Kresic@infobip.com>
Date:   Mon Jan 15 11:18:41 2024 +0000

    Pull request #414: Updated min SDK version to 21

    Merge in MML/infobip-mobile-messaging-android from ikresic-MM-6172-android-raise-min-sdk-version-to-21 to feature/release_12.0.0

    Squashed commit of the following:

    commit e4012fbb064a3960e1d1e834ec193f26d8635915
    Author: ikresic <ivan.kresic@infobip.com>
    Date:   Thu Jan 11 16:56:59 2024 +0100

        - updated minimum supported version in ReadMe

    commit fc830dc2814925d0a0b65bedf78c6173aaa04461
    Author: ikresic <ivan.kresic@infobip.com>
    Date:   Thu Jan 11 16:42:52 2024 +0100

        - updated min SDK version to 21

    commit d0ee096f3b99956e87a35d1bf2e3ed655e66b536
    Author: infobip-ci <infobip-ci@infobip.com>
    Date:   Thu Dec 28 12:27:45 2023 +0100

        [Gradle Release Plugin] - new version commit:  '11.3.0-SNAPSHOT'.

    commit 09297d1dea747a38a268d960c41ef922e983b89c
    Author: infobip-ci <infobip-ci@infobip.com>
    Date:   Thu Dec 28 12:27:44 2023 +0100

        [Gr

--- a/infobip-mobile-messaging-android-chat-sdk/src/androidTest/AndroidManifest.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/androidTest/AndroidManifest.xml
@@ -3,6 +3,7 @@
 
     <application
         android:usesCleartextTraffic="true"
-        tools:targetApi="m"/>
+        tools:replace="android:usesCleartextTraffic"
+        tools:targetApi="m" />
 
 </manifest>
