--- a/infobip-mobile-messaging-android-demo/src/main/AndroidManifest.xml
+++ b/infobip-mobile-messaging-android-demo/src/main/AndroidManifest.xml
@@ -4,11 +4,11 @@
     package="org.infobip.mobile.messaging.demo">
 
     <application
+        android:name="org.infobip.mobile.messaging.demo.Application"
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        android:name="org.infobip.mobile.messaging.demo.Application">
-    </application>
+        tools:replace="android:allowBackup" />
 </manifest>
