--- a/infobip-mobile-messaging-android-demo/src/chatWithCalls/AndroidManifest.xml
+++ b/infobip-mobile-messaging-android-demo/src/chatWithCalls/AndroidManifest.xml
@@ -10,13 +10,13 @@
     <uses-permission android:name="android.permission.READ_MEDIA_AUDIO" />
 
     <application
+        android:name=".ChatWithCallsApplication"
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        tools:replace="android:name"
-        android:name=".ChatWithCallsApplication">
+        tools:replace="android:name,android:allowBackup">
 
         <activity
             android:name=".MainActivity"
