--- a/infobip-mobile-messaging-android-demo/src/push/AndroidManifest.xml
+++ b/infobip-mobile-messaging-android-demo/src/push/AndroidManifest.xml
@@ -6,9 +6,9 @@
 
         <activity
             android:name=".MainActivity"
+            android:exported="true"
             android:label="@string/main_activity_title"
-            android:theme="@style/AppTheme.NoActionBar"
-            android:exported="true">
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <action android:name="android.intent.action.VIEW" />
