--- a/infobip-mobile-messaging-android-sdk/src/androidTest/AndroidManifest.xml
+++ b/infobip-mobile-messaging-android-sdk/src/androidTest/AndroidManifest.xml
@@ -3,6 +3,7 @@
 
     <application
         android:usesCleartextTraffic="true"
-        tools:targetApi="m"/>
+        tools:replace="android:usesCleartextTraffic"
+        tools:targetApi="m" />
 
 </manifest>
