Pull request #418: Jdzubak MCA-3541 rtcui android 14
Merge in MML/infobip-mobile-messaging-android from jdzubak-MCA-3541-rtcui-android-14 to master

Squashed commit of the following:

commit 3ef464f1838e1a5aa3c9c1322c388fd7fde3330a
Author: Jakub Dzubak <jakub.dzubak@infobip.com>
Date:   Tue Jan 16 16:52:41 2024 +0100

    MCA-3541 Android 14 Screen sharing update

commit 5fc264cff1151bfc8f2731d0a7b6fb40edc28fb0
Author: Jakub Dzubak <jakub.dzubak@infobip.com>
Date:   Tue Jan 16 09:12:23 2024 +0100

    MCA-3541 Added InfobipRtcUi Android 14 support

commit b848c841f29aaa9b3d9a2c1b4f0d004f2dc95985
Merge: de2c9e18 44c25e7a
Author: Jakub Dzubak <jakub.dzubak@infobip.com>
Date:   Tue Jan 16 09:04:32 2024 +0100

    Merge branch 'master' into jdzubak-MCA-3541-rtcui-android-14

    # Conflicts:
    #	infobip-mobile-messaging-android-chat-sdk/src/main/AndroidManifest.xml

commit de2c9e18c9819cd7641ca13a0c52d408e2d9aad0
Author: Jakub Dzubak <jakub.dzubak@infobip.com>
Date:   Tue Jan 16 09:03:34 2024 +0100

    MCA-3541 Added InfobipRtcUi Android 14 support

commit 9165311f5fdd986c244d8770b87940f0f2db9977
Merge: e1fbcfb0 68edac8e
Author: Jakub Dzubak <jakub.dzubak@infobip.com>
Date:   Mon Jan 15 08:37:19 2024 +0100

    Merge branch 'master' into jdzubak-MCA-3541-rtcui-android-14

    # Conflicts:
    #	infobip-mobile-messaging-android-chat-sdk/src/main/java/org/infobip/mobile/messaging/chat/core/InAppChatClientImpl.java

commit e1fbcfb0086f7b4c4ac2fa65a7dd7642dfec1600
Author: Jakub Dzubak <jakub.dzubak@infobip.com>
Date:   Fri Jan 12 14:38:18 2024 +0100

    MCA-3541 chatResume and chatPause widget API

--- a/infobip-mobile-messaging-android-chat-sdk/src/main/AndroidManifest.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
 
     <application
         android:allowBackup="false"
-        android:usesCleartextTraffic="false">
+        android:usesCleartextTraffic="false"
+        android:enableOnBackInvokedCallback="true">
         <activity
             android:name=".view.InAppChatAttachmentPreviewActivity"
             android:screenOrientation="portrait"
