--- a/infobip-mobile-messaging-android-demo/build.gradle
+++ b/infobip-mobile-messaging-android-demo/build.gradle
@@ -13,14 +13,16 @@ plugins {
 }
 
 android {
-    compileSdkVersion mm_compileSdkVersion
-    buildToolsVersion mm_buildToolsVersion
 
     defaultConfig {
         minSdkVersion mm_minSdkVersion
         targetSdkVersion mm_targetSdkVersion
+        compileSdk mm_compileSdkVersion
+        buildToolsVersion = mm_buildToolsVersion
+
         versionCode 1
         versionName version
+
         applicationId "org.infobip.mobile.messaging.demo"
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
         multiDexEnabled true
@@ -42,7 +44,7 @@ android {
     }
 
     buildTypes {
-        all {
+        configureEach {
             property(project, 'google_app_id', 'GOOGLE_APP_ID')?.with { resValue "string", "google_app_id", delegate }
             property(project, 'infobip_application_code', 'INFOBIP_APPLICATION_CODE')?.with { resValue "string", "infobip_application_code", delegate }
             property(project, 'infobip_api_uri', 'INFOBIP_API_URI')?.with { resValue "string", "infobip_api_uri", delegate }
@@ -60,7 +62,7 @@ android {
         abortOnError false
     }
 
-    flavorDimensions "default"
+    flavorDimensions = ["default"]
 
     productFlavors {
         push {
@@ -119,8 +121,8 @@ android {
 
 dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    testImplementation "junit:junit:4.12"
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    testImplementation "junit:junit:4.13.2"
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
 
     implementation project(":infobip-mobile-messaging-android-chat-sdk")
     implementation project(":infobip-mobile-messaging-android-geo-sdk")
@@ -151,7 +153,7 @@ private static String property(Project project, String projectKey, String enviro
     return project.hasProperty(projectKey) ? project[projectKey] : System.getenv(environmentKey)
 }
 
-task uncommentGoogleServices {
+tasks.register('uncommentGoogleServices') {
     doLast {
         def readmeFile = new File('infobip-mobile-messaging-android-demo/build.gradle')
         def text = readmeFile.text
