--- a/infobip-rtc-ui/build.gradle
+++ b/infobip-rtc-ui/build.gradle
@@ -5,14 +5,13 @@ buildscript {
     }
     dependencies {
         classpath "com.android.tools.build:gradle:$mm_gradlePluginVersion"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$mm_kotlinVersion"
     }
 }
 
 plugins {
     id 'com.android.library'
     id 'maven-publish'
-    id 'org.jetbrains.kotlin.android'
+    id 'kotlin-android'
     id 'org.jetbrains.kotlin.kapt'
 }
 
@@ -57,34 +56,28 @@ android {
 }
 
 dependencies {
-    constraints {
-        implementation ("org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.8.0") {
-            because("kotlin-stdlib-jdk7 is now a part of kotlin-stdlib")
-        }
-        implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.8.0") {
-            because("kotlin-stdlib-jdk8 is now a part of kotlin-stdlib")
-        }
-    }
-
-    implementation "androidx.constraintlayout:constraintlayout:$mm_constraintLayoutVersion"
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$mm_kotlinVersion"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4"
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$mm_lifecycleVersion"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$mm_lifecycleVersion"
-    implementation "androidx.fragment:fragment-ktx:1.5.4"
     implementation project(":infobip-mobile-messaging-android-sdk")
-    implementation "androidx.core:core-ktx:$mm_coreKtxVersion"
-    implementation "androidx.appcompat:appcompat:$mm_appCompatVersion"
-    implementation "com.google.android.material:material:$mm_materialVersion"
     api ("com.infobip:infobip-rtc:2.2.11") {
         transitive = true
     }
-    implementation "androidx.work:work-runtime-ktx:2.8.1"
+
+    implementation (platform("org.jetbrains.kotlin:kotlin-bom:$mm_kotlinVersion"))
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4"
+
+    implementation "androidx.core:core-ktx:$mm_coreKtxVersion"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$mm_lifecycleVersion"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$mm_lifecycleVersion"
+    implementation "androidx.fragment:fragment-ktx:1.5.4"
+    implementation "androidx.work:work-runtime-ktx:2.9.0"
+
+    implementation "androidx.constraintlayout:constraintlayout:$mm_constraintLayoutVersion"
+    implementation "androidx.appcompat:appcompat:$mm_appCompatVersion"
+    implementation "com.google.android.material:material:$mm_materialVersion"
 
     testImplementation "junit:junit:4.13.2"
 
-    androidTestImplementation "androidx.test.ext:junit:1.1.3"
-    androidTestImplementation "androidx.test.espresso:espresso-core:3.4.0"
+    androidTestImplementation "androidx.test.ext:junit:1.1.5"
+    androidTestImplementation "androidx.test.espresso:espresso-core:3.5.1"
 
     coreLibraryDesugaring "com.android.tools:desugar_jdk_libs:$mm_desugarJdkVersion"
 }
