--- a/infobip-mobile-messaging-android-demo/src/chatWithCalls/AndroidManifest.xml
+++ b/infobip-mobile-messaging-android-demo/src/chatWithCalls/AndroidManifest.xml
@@ -3,8 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="org.infobip.mobile.messaging.demo">
 
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="false" />
+
     <uses-permission android:name="android.permission.CAMERA" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        android:maxSdkVersion="28" />
     <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
     <uses-permission android:name="android.permission.READ_MEDIA_VIDEO" />
     <uses-permission android:name="android.permission.READ_MEDIA_AUDIO" />
