--- a/gradle.properties
+++ b/gradle.properties
@@ -23,6 +23,6 @@ android.useAndroidX=true
 android.enableJetifier=true
 #org.gradle.daemon=true
 #org.gradle.configure?ondemand=true
-org.gradle.jvmargs=-Xmx4g -XX:MaxPermSize=2048m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+org.gradle.jvmargs=-Xmx4g -XX:MaxMetaspaceSize=2048m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
 android.disableAutomaticComponentCreation=true
 android.suppressUnsupportedCompileSdk=34
