Pull request #463: Fixed Gradle file for Maven release
Merge in MML/infobip-mobile-messaging-android from ikresic-MM-6875-android-fix-maven-dependencies to master

Squashed commit of the following:

commit c93da495dfc41d6a53e9ac7677db72cf0ccdde73
Author: ikresic <ivan.kresic@infobip.com>
Date:   Fri Oct 18 17:39:07 2024 +0200

    - test fixes

commit 5f0560b680056d431fb0bb9733c7aeda1dfc9399
Author: infobip-ci <infobip-ci@infobip.com>
Date:   Fri Oct 18 17:00:27 2024 +0200

    [Gradle Release Plugin] - new version commit:  '13.1.0-SNAPSHOT'.

commit 4700c7774a93071b51f41c932b6a4f7998a6c8c2
Author: infobip-ci <infobip-ci@infobip.com>
Date:   Fri Oct 18 17:00:25 2024 +0200

     [Gradle Release Plugin] - pre tag commit:  '13.0.2-rc5'.

commit 44cff7c903dd0c39bbb8dd4e0f3d3e33dd87719c
Author: ikresic <ivan.kresic@infobip.com>
Date:   Fri Oct 18 16:34:51 2024 +0200

    - test fixes

--- a/infobip-mobile-messaging-api-java/build.gradle
+++ b/infobip-mobile-messaging-api-java/build.gradle
@@ -8,14 +8,35 @@ plugins {
 java {
     sourceCompatibility = JavaVersion.VERSION_1_8
     targetCompatibility = JavaVersion.VERSION_1_8
+    withJavadocJar()
+    withSourcesJar()
+}
+
+
+publishing {
+    publications {
+        mavenJar(MavenPublication) {
+            from components.java
+        }
+    }
 }
 
 afterEvaluate {
     publishing {
         publications {
-            mavenJar(MavenPublication) {
-                artifact sourcesJar
-                artifact javadocJar
+            maven(MavenPublication) {
+                pom {
+                    withXml {
+                        def dependenciesNode = asNode().appendNode('dependencies')
+
+                        project.configurations.implementation.allDependencies.each {
+                            def dependencyNode = dependenciesNode.appendNode('dependency')
+                            dependencyNode.appendNode('groupId', it.group)
+                            dependencyNode.appendNode('artifactId', it.name)
+                            dependencyNode.appendNode('version', it.version)
+                        }
+                    }
+                }
             }
         }
     }
@@ -28,25 +49,6 @@ configurations {
 sourceSets {
     main { compileClasspath += configurations.provided }
     test { compileClasspath += configurations.provided }
-}
-
-task sourcesJar(type: Jar, dependsOn: classes) {
-    archiveClassifier.set('sources')
-    from sourceSets.main.allSource
-}
-
-javadoc {
-    failOnError = false
-}
-
-task javadocJar(type: Jar, dependsOn: javadoc) {
-    archiveClassifier.set('javadoc')
-    from javadoc.destinationDir
-}
-
-artifacts {
-    archives sourcesJar
-    archives javadocJar
 }
 
 idea {
