Pull request #467: aboldyrev-MM-6908-sdk_versioning
Merge in MML/infobip-mobile-messaging-android from aboldyrev-MM-6908-sdk_versioning to master

Squashed commit of the following:

commit 8734e564b0ae040bb931437812bd74ad39ac009c
Author: Alexander Boldyrev <alexander.boldyrev@infobip.com>
Date:   Fri Nov 8 13:52:59 2024 +0300

    added test to avoid null being set again

commit 7c56e41a5941bc320a0aeae0bff9e8fb4be616f0
Author: Alexander Boldyrev <alexander.boldyrev@infobip.com>
Date:   Fri Nov 8 11:52:44 2024 +0300

    versioning

--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,7 @@ ext {
     mm_coreKtxVersion = "1.10.1"
     mm_desugarJdkVersion = "1.1.5"
     mm_lifecycleVersion = "2.5.1"
+    mm_version = "$version"
 }
 
 allprojects {
