--- a/infobip-mobile-messaging-android-sdk/build.gradle
+++ b/infobip-mobile-messaging-android-sdk/build.gradle
@@ -34,7 +34,7 @@ android {
 
         // since AGP 4.1 "VERSION_NAME" is not included anymore to BuildConfig
         // https://issuetracker.google.com/issues/154275579
-        buildConfigField "String", "VERSION_NAME", "\"$versionName\""
+        buildConfigField "String", "MM_SDK_VERSION", "\"${mm_version}\""
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
         consumerProguardFiles 'proguard-rules.pro'
     }
