Pull request #477: Jdzubak MCA-4328 lc widget uri injection
Merge in MML/infobip-mobile-messaging-android from jdzubak-MCA-4328-lc-widget-uri-injection to master

Squashed commit of the following:

commit d8f8d06a42b6e483d52b4ff429802022926bdf5e
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Fri Jan 31 15:23:00 2025 +0100

    MCA-4441 Jenkins job can inject Livechat Widget URI now. Gradle deprecated syntax updated.

commit 52d9ac841f0550a9b55b84cdc7c375bf14905924
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Fri Jan 31 15:17:05 2025 +0100

    MCA-4441 Jenkins job can inject Livechat Widget URI now. Gradle deprecated syntax updated.

commit cd9be5299281d8b27e43fe429100dd293a9f6a48
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Fri Jan 31 15:17:05 2025 +0100

    Rename .java to .kt

--- a/infobip-mobile-messaging-android-chat-sdk/build.gradle
+++ b/infobip-mobile-messaging-android-chat-sdk/build.gradle
@@ -17,9 +17,9 @@ plugins {
 }
 
 android {
-    namespace "org.infobip.mobile.messaging.chat"
-    compileSdkVersion mm_compileSdkVersion
-    buildToolsVersion mm_buildToolsVersion
+    namespace = "org.infobip.mobile.messaging.chat"
+    buildToolsVersion = mm_buildToolsVersion
+    compileSdk = mm_compileSdkVersion
 
     publishing {
         multipleVariants {
@@ -69,6 +69,7 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
     lint {
         abortOnError false
     }
