--- a/build.gradle
+++ b/build.gradle
@@ -2,13 +2,15 @@ buildscript {
     //Kotlin-Gradle-AGP compatibility matrix https://kotlinlang.org/docs/gradle-configure-project.html#apply-the-plugin
     ext.mm_kotlinVersion = "1.8.20"
     ext.mm_gradlePluginVersion = '8.5.2'
+    ext.mm_desugarJdkVersion = "2.1.4"
+
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
         classpath "com.android.tools.build:gradle:$mm_gradlePluginVersion"
-        classpath "com.android.tools:desugar_jdk_libs:1.1.5"
+        classpath "com.android.tools:desugar_jdk_libs:$mm_desugarJdkVersion"
     }
 }
 
@@ -29,10 +31,9 @@ ext {
     mm_firebaseMessagingVersion = "22.0.0"
     mm_gmsLocationVersion = "21.0.1"
     mm_constraintLayoutVersion = "2.1.4"
-    mm_appCompatVersion = "1.6.1"
-    mm_materialVersion = "1.9.0"
+    mm_appCompatVersion = "1.7.0"
+    mm_materialVersion = "1.12.0"
     mm_coreKtxVersion = "1.10.1"
-    mm_desugarJdkVersion = "1.1.5"
     mm_lifecycleVersion = "2.5.1"
     mm_version = "$version"
 }
@@ -65,7 +66,7 @@ tasks.register('publishAllPublicationsToMavenRepository') {
     dependsOn subprojects.collect { it.tasks.named('publishReleasePublicationToSonatypeRepository') }
 }
 
-task updateVersionInReadme {
+tasks.register('updateVersionInReadme') {
     doLast {
         def readmeFile = new File('README.md')
         def text = readmeFile.text
@@ -75,7 +76,7 @@ task updateVersionInReadme {
     }
 }
 
-task updateRtcUiVersionInReadme {
+tasks.register('updateRtcUiVersionInReadme') {
     doLast {
         def readmeFile = new File('infobip-rtc-ui/README.md')
         def text = readmeFile.text
