--- a/infobip-mobile-messaging-android-demo/build.gradle
+++ b/infobip-mobile-messaging-android-demo/build.gradle
@@ -4,7 +4,7 @@ buildscript {
         google()
     }
     dependencies {
-        classpath 'com.google.gms:google-services:4.3.14'
+        classpath 'com.google.gms:google-services:4.4.2'
     }
 }
 
@@ -13,9 +13,9 @@ plugins {
 }
 
 android {
-    compileSdkVersion mm_compileSdkVersion
-    buildToolsVersion mm_buildToolsVersion
-    namespace "org.infobip.mobile.messaging.demo"
+    namespace = "org.infobip.mobile.messaging.demo"
+    buildToolsVersion = mm_buildToolsVersion
+    compileSdk = mm_compileSdkVersion
 
     defaultConfig {
         minSdkVersion mm_minSdkVersion
@@ -44,10 +44,11 @@ android {
     }
 
     buildTypes {
-        all {
+        configureEach {
             property(project, 'google_app_id', 'GOOGLE_APP_ID')?.with { resValue "string", "google_app_id", delegate }
             property(project, 'infobip_application_code', 'INFOBIP_APPLICATION_CODE')?.with { resValue "string", "infobip_application_code", delegate }
             property(project, 'infobip_api_uri', 'INFOBIP_API_URI')?.with { resValue "string", "infobip_api_uri", delegate }
+            property(project, 'infobip_inappchat_widget_uri', 'INFOBIP_INAPPCHAT_WIDGET_URI')?.with { resValue "string", "ib_inappchat_widget_uri", delegate }
         }
 
         release {
@@ -58,8 +59,7 @@ android {
         }
     }
 
-
-    flavorDimensions "default"
+    flavorDimensions = ["default"]
 
     productFlavors {
         push {
@@ -110,6 +110,7 @@ android {
             res.srcDirs += "src/chatCommon/res"
         }
     }
+
     lint {
         abortOnError false
     }
@@ -117,9 +118,9 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    testImplementation "junit:junit:4.12"
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    implementation 'androidx.constraintlayout:constraintlayout:2.2.0'
+    testImplementation "junit:junit:4.13.2"
+    androidTestImplementation 'androidx.test.ext:junit:1.2.1'
 
     implementation project(":infobip-mobile-messaging-android-chat-sdk")
     implementation project(":infobip-mobile-messaging-android-resources")
@@ -127,12 +128,12 @@ dependencies {
     implementation project(":infobip-mobile-messaging-api-java")
     implementation project(":infobip-mobile-messaging-android-inbox-sdk")
 
-    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation "androidx.appcompat:appcompat:$mm_appCompatVersion"
     implementation "com.google.android.material:material:$mm_materialVersion"
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.localbroadcastmanager:localbroadcastmanager:1.0.0'
+    implementation 'androidx.localbroadcastmanager:localbroadcastmanager:1.1.0'
 
-    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
+    coreLibraryDesugaring "com.android.tools:desugar_jdk_libs:$mm_desugarJdkVersion"
 
     //To add WebRTC use build flavour "chatWithCalls"
     chatWithCallsImplementation project(':infobip-rtc-ui')
@@ -150,8 +151,8 @@ dependencies {
 private static String property(Project project, String projectKey, String environmentKey) {
     return project.hasProperty(projectKey) ? project[projectKey] : System.getenv(environmentKey)
 }
-    
-task uncommentGoogleServices {
+
+tasks.register('uncommentGoogleServices') {
     doLast {
         def readmeFile = new File('infobip-mobile-messaging-android-demo/build.gradle')
         def text = readmeFile.text
